moving queens gambit to draft scenaio book

--- a/draft-scenarios/campaigns/castle_greek_gift.tex
+++ b/draft-scenarios/campaigns/castle_greek_gift.tex
@@ -14,7 +14,7 @@ While Catherine grapples with her responsibility—and her demons—she must be 
 
 \subsection*{\MakeUppercase{Scenario length}}
 
-This scenario plays out over 8 rounds.
+This Scenario plays out over 8 Rounds.
 
 \subsection*{\MakeUppercase{Player setup}}
 
@@ -33,7 +33,7 @@ This scenario plays out over 8 rounds.
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling, Citadel
 
-\subsection*{\MakeUppercase{AI hero setup}}
+\subsection*{\MakeUppercase{AI Hero setup}}
 
 \textbf{Faction:} Necropolis
 
@@ -45,28 +45,28 @@ This scenario plays out over 8 rounds.
 
 \subsection*{\MakeUppercase{Map setup}}
 
-Take the following Map tiles and arrange them as shown in the scenario map layout:
+Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 
-\textbf{1 × Starting (I) Map tile}
+\textbf{1 × Starting (I) Map Tile}
 \begin{itemize}
     \item 1 x Castle (S3)
 \end{itemize}
 
-\textbf{3 × Far (II--III) Map tile}
+\textbf{3 × Far (II--III) Map Tile}
 \begin{itemize}
     \item 3 x Castle (F3, F6, F9)
 \end{itemize}
 
-\textbf{2 × Near (IV--V) Map tile}
+\textbf{2 × Near (IV--V) Map Tile}
 \begin{itemize}
     \item 2 x Castle (N3, N6)
 \end{itemize}
 
 \subsection*{\MakeUppercase{Heroes placement}}
 
-Place your Castle hero on the center field of the S3 Castle starting map tile.
+Place your Castle Hero on the center Field of the S3 Castle starting map Tile.
 
-Place a Necropolis hero on the center field of the N3 Castle tile.
+Place a Necropolis Hero on the center Field of the N3 Castle Tile.
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
@@ -75,7 +75,7 @@ Defeat the enemy army.
 \subsection*{\MakeUppercase{Defeat Conditions}}
 \begin{itemize}
   \item You lose one combat encounter
-  \item You run out of time at the end of the 8th round
+  \item You run out of time at the end of the 8th Round
 \end{itemize}
 \end{multicols*}
 
@@ -95,23 +95,23 @@ Defeat the enemy army.
   \item Read "Reverent Allies" section
 \end{itemize}
 
-\textbf{Before combat with the enemy hero:}
+\textbf{Before combat with the enemy Hero:}
 \begin{itemize}
   \item Read "Bait and Switch" section
 \end{itemize}
 
-\textbf{When you complete the scenario:}
+\textbf{When you complete the Scenario:}
 \begin{itemize}
   \item Read "The Chase Begins" section
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional rules}}
 
-During this Castle campaign scenario, the following rules apply:
+During this Castle campaign Scenario, the following rules apply:
 
 \begin{itemize}
   \item The enemy army does not move
-  \item Your hero's maximum level is 4
+  \item Your Hero's maximum Level is 4
   \item The Gloria of Erathia building is unavailable
   \item The settlement on F3 does not have neutral enemies
 \end{itemize}
@@ -189,7 +189,7 @@ It was a trap. The necromancer and his strongest forces were not there, and Cath
 \begin{itemize}
   \item \textcolor{darkcandyapplered}{Replace the Ghost Dragons and Dread Knights with \svgunit{bronze} neutral Zombies and Skeletons.}
   \item \textcolor{darkcandyapplered}{Play "Cloak of the Undead King IV" and "Cloak of the Undead King VI" onto the packs of Zombies and Skeletons, respectively.}
-  \item \textcolor{darkcandyapplered}{Remove the AI Might and Magic deck from the game, the undead fight on their own.}
+  \item \textcolor{darkcandyapplered}{Remove the AI Might and Magic Deck from the game, the undead fight on their own.}
 \end{itemize}
 
 
@@ -213,8 +213,8 @@ Catherine responded with fire in her eyes. "What good is rebuilding a ruin when 
 
 \begin{itemize}
   \item \textcolor{darkcandyapplered}{Remove Archangels from your army.}
-  \item \textcolor{darkcandyapplered}{Keep the rest of your forces and resources for the next scenario.}
-  \item \textcolor{darkcandyapplered}{Reset your hero per the normal campaign rules.}
+  \item \textcolor{darkcandyapplered}{Keep the rest of your forces and resources for the next Scenario.}
+  \item \textcolor{darkcandyapplered}{Reset your Hero per the normal campaign rules.}
 \end{itemize}
 
 \columnbreak
