--- a/draft-scenarios/campaigns/castle_sicilian_dragon.tex
+++ b/draft-scenarios/campaigns/castle_sicilian_dragon.tex
@@ -12,26 +12,26 @@ Following the Archangels to a distant, inhospitable land, she must now navigate 
 
 \subsection*{\MakeUppercase{Scenario length}}
 
-This scenario plays out over 10 rounds.
+This Scenario plays out over 10 Rounds.
 
 \subsection*{\MakeUppercase{Player setup}}
 
 \textbf{Faction:} Castle
 
-\textbf{Faction Hero:} The same hero you played in scenario 1
+\textbf{Faction Hero:} The same Hero you played in Scenario 1
 
-\textbf{Starting Resources:} The resources you ended with in scenario 1
+\textbf{Starting Resources:} The resources you ended with in Scenario 1
 
 \textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item The army you ended with in scenario 1
+  \item The army you ended with in Scenario 1
 \end{itemize}
 
 \textbf{Town Buildings:} None
 
-\subsection*{\MakeUppercase{AI hero setup}}
+\subsection*{\MakeUppercase{AI Hero setup}}
 
 \textbf{Faction:} Necropolis
 
@@ -47,36 +47,36 @@ This scenario plays out over 10 rounds.
 
 \subsection*{\MakeUppercase{Map setup}}
 
-Take the following Map tiles and arrange them as shown in the scenario map layout:
+Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 
-\textbf{1 × Starting (I) Map tile}
+\textbf{1 × Starting (I) Map Tile}
 \begin{itemize}
     \item 1 x Necropolis (S1)
 \end{itemize}
 
-\textbf{3 × Far (II--III) Map tile}
+\textbf{3 × Far (II--III) Map Tile}
 \begin{itemize}
-    \item 3 x random tiles from Necropolis or Dungeon (F1, F2, F4, F5, F7, F8)
+    \item 3 x random Tiles from Necropolis or Dungeon (F1, F2, F4, F5, F7, F8)
 \end{itemize}
 
-\textbf{4 × Near (IV--V) Map tile}
+\textbf{4 × Near (IV--V) Map Tile}
 \begin{itemize}
     \item 2 x Necropolis (N1, N4)
     \item 2 x Dungeon (N2, N5)
 \end{itemize}
 
-\textbf{1 × Center (VI--VII) Map tile}
+\textbf{1 × Center (VI--VII) Map Tile}
 \begin{itemize}
-  \item 1 × Grail tile (C2)
+  \item 1 × Grail Tile (C2)
 \end{itemize}
 
-\textbf{\MakeUppercase{Note:}} Place tile S1 aside, face up.
+\textbf{\MakeUppercase{Note:}} Place Tile S1 aside, face up.
 
 \subsection*{\MakeUppercase{Heroes placement}}
 
-Place your Castle hero on the empty field of the rightmost Far tile. Rotate the tile as desired.
+Place your Castle Hero on the empty Field of the rightmost Far Tile. Rotate the Tile as desired.
 
-Place a Necropolis hero on the center field of the S1 Necropolis tile.
+Place a Necropolis Hero on the center Field of the S1 Necropolis Tile.
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
@@ -89,7 +89,7 @@ Place a Necropolis hero on the center field of the S1 Necropolis tile.
 \subsection*{\MakeUppercase{Defeat Conditions}}
 \begin{itemize}
   \item You lose one combat encounter
-  \item You run out of time at the end of the 10th round
+  \item You run out of time at the end of the 10th Round
 \end{itemize}
 
 \end{multicols*}
@@ -115,7 +115,7 @@ Place a Necropolis hero on the center field of the S1 Necropolis tile.
   \item Read "Showdown" section
 \end{itemize}
 
-\textbf{When you complete the scenario:}
+\textbf{When you complete the Scenario:}
 \begin{itemize}
   \item Read "The Escape" section
 \end{itemize}
@@ -124,20 +124,20 @@ Place a Necropolis hero on the center field of the S1 Necropolis tile.
 
 \subsection*{\MakeUppercase{Additional rules}}
 
-During this Castle campaign scenario, the following rules apply:
+During this Castle campaign Scenario, the following rules apply:
 
 \begin{itemize}
   \item The enemy army does not move
-  \item Your hero's maximum level is 6
+  \item Your Hero's maximum Level is 6
   \item All buildings are unavailable, building is not possible
 \end{itemize}
 
 \columnbreak
 
 \begin{itemize}
-\item All neutral enemies fight using the Neutral Enemy deck.
-\item Each time you visit a trading post, draw the top cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy decks. You may recruit any, or all of them by paying their cost. Shuffle any un-hired ones back into their decks
-\item If the relic is captured, it may be traded in at a trading post for 30 \svgunit{gold}, or \textbf{Search (3)} the relic deck, twice.
+\item All neutral enemies fight using the Neutral Enemy Deck.
+\item Each time you visit a trading post, draw the top cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy Decks. You may recruit any, or all of them by paying their cost. Shuffle any un-hired ones back into their Decks
+\item If the relic is captured, it may be traded in at a trading post for 30 \svgunit{gold}, or \textbf{Search (3)} the relic Deck, twice.
 \item When fighting the enemy at thier town, they have a citadel. Don't forget to add the walls and arrow tower to make the battle a siege.
 \end{itemize}
 
@@ -199,7 +199,7 @@ Catherine smiled, reaching to clasp the arm of the angel in thanks for his work.
 
 \begin{itemize}
   \item \textcolor{darkcandyapplered}{Add "A Few" Archangels to your army.}
-  \item \textcolor{darkcandyapplered}{You may now teleport to the enemy town on tile S1. If you choose not to, you may in the future by spending one movement at this Obelisk.}
+  \item \textcolor{darkcandyapplered}{You may now teleport to the enemy town on Tile S1. If you choose not to, you may in the future by spending one movement at this Obelisk.}
 \end{itemize}
 
 
@@ -223,8 +223,8 @@ Catherine turned to observe the battlefield from above. The butcher's bill had b
 
 \begin{itemize}
   \item \textcolor{darkcandyapplered}{Remove Archangels from your army, if possible.}
-  \item \textcolor{darkcandyapplered}{Keep the rest of your army and resources for the next scenario.}
-  \item \textcolor{darkcandyapplered}{Reset your hero per the normal campaign rules.}
+  \item \textcolor{darkcandyapplered}{Keep the rest of your army and resources for the next Scenario.}
+  \item \textcolor{darkcandyapplered}{Reset your Hero per the normal campaign rules.}
 \end{itemize}
 
 \vspace{2em}
