--- a/draft-scenarios/campaigns/castle_two_knights_defense.tex
+++ b/draft-scenarios/campaigns/castle_two_knights_defense.tex
@@ -11,26 +11,26 @@
 
 \subsection*{\MakeUppercase{Scenario length}}
 
-This scenario plays out over 8 rounds.
+This Scenario plays out over 8 Rounds.
 
 \subsection*{\MakeUppercase{Player setup}}
 
 \textbf{Faction:} Castle
 
-\textbf{Faction Hero:} The same hero you played in scenario 2
+\textbf{Faction Hero:} The same Hero you played in Scenario 2
 
-\textbf{Starting Resources:} The resources you ended scenario 2 with, plus 10 \svg{gold}
+\textbf{Starting Resources:} The resources you ended Scenario 2 with, plus 10 \svg{gold}
 
 \textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item The army you ended scenario 2 with
+  \item The army you ended Scenario 2 with
 \end{itemize}
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling, \svgunit{silver} Dwelling, Citadel
 
-\subsection*{\MakeUppercase{AI hero setup}}
+\subsection*{\MakeUppercase{AI Hero setup}}
 
 \textbf{Faction:} Necropolis
 
@@ -44,34 +44,34 @@ This scenario plays out over 8 rounds.
 
 \subsection*{\MakeUppercase{Map setup}}
 
-Take the following Map tiles and arrange them as shown in the scenario map layout:
+Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 
-\textbf{1 × Starting (I) Map tile}
+\textbf{1 × Starting (I) Map Tile}
 \begin{itemize}
     \item 1 x Necropolis (S1)
 \end{itemize}
 
-\textbf{2 × Far (II--III) Map tile}
+\textbf{2 × Far (II--III) Map Tile}
 \begin{itemize}
-    \item 2 x random tiles from Necropolis or Dungeon (F1, F2, F4, F5, F7, F8)
+    \item 2 x random Tiles from Necropolis or Dungeon (F1, F2, F4, F5, F7, F8)
 \end{itemize}
 
-\textbf{4 × Near (IV--V) Map tile}
+\textbf{4 × Near (IV--V) Map Tile}
 \begin{itemize}
     \item 2 x Necropolis (N1, N4)
     \item 2 x Dungeon (N2, N5)
 \end{itemize}
 
-\textbf{1 × Center (VI--VII) Map tile}
+\textbf{1 × Center (VI--VII) Map Tile}
 \begin{itemize}
-  \item 1 × Dragon Utopia tile (C1)
+  \item 1 × Dragon Utopia Tile (C1)
 \end{itemize}
 
 \subsection*{\MakeUppercase{Heroes placement}}
 
-Place your Castle hero on the center field of the Necropolis start tile S1.
+Place your Castle Hero on the center Field of the Necropolis start Tile S1.
 
-Place a Necropolis hero on the bottom left field of the leftmost Far tile. Reveal the tile when the game begins.
+Place a Necropolis Hero on the bottom left Field of the leftmost Far Tile. Reveal the Tile when the game begins.
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
@@ -83,7 +83,7 @@ Place a Necropolis hero on the bottom left field of the leftmost Far tile. Revea
 \subsection*{\MakeUppercase{Defeat Conditions}}
 \begin{itemize}
   \item You lose one combat encounter
-  \item You run out of time at the end of the 8th round
+  \item You run out of time at the end of the 8th Round
 \end{itemize}
 \end{multicols*}
 
@@ -98,19 +98,19 @@ Place a Necropolis hero on the bottom left field of the leftmost Far tile. Revea
   \item Read "The Race" section
 \end{itemize}
 
-\textbf{When you complete the scenario:}
+\textbf{When you complete the Scenario:}
 \begin{itemize}
   \item Read "Checkmate" section
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional rules}}
 
-During this Castle campaign scenario, the following rules apply:
+During this Castle campaign Scenario, the following rules apply:
 
 \begin{itemize}
   \item The Gloria of Erathia building is unavailable
-  \item Each time you visit a trading post, draw the top cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy decks. You may recruit any, or all of them by paying their cost. Shuffle any un-hired ones back into their decks
-  \item After defeating the neutral army at the Dragon Utopia, add a random dragon from the \svgunit{azure} Azure neutral deck to your army
+  \item Each time you visit a trading post, draw the top cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy Decks. You may recruit any, or all of them by paying their cost. Shuffle any un-hired ones back into their Decks
+  \item After defeating the neutral army at the Dragon Utopia, add a random dragon from the \svgunit{azure} Azure neutral Deck to your army
   \item The enemy army follows the normal AI movement rules, stopping to capture settlements and mines, with its ultimate goal to reach the Dragon Utopia
   \item If the enemy army reaches the Dragon Utopia before you do, flip the "Pack" side of Dread Knights to "Few" and add "A Pack" of Ghost Dragons
 \end{itemize}
