--- a/draft-scenarios/metadata.tex
+++ b/draft-scenarios/metadata.tex
@@ -96,7 +96,7 @@
 \newtoggle{githubbuild}
 
 % Variables
-\def\_assets{assets}
+\def\_assets{../assets}
 
 \def\art{\_assets/art}
 \def\cards{\_assets/cards}
@@ -465,7 +465,7 @@
 
 \clearpage
 
-% \include{scenarios/your_scenario.tex}
+\include{campaigns/main.tex}
 
 \include{sections/back_cover.tex}
 
