revert some small changes to meta, main, po4a

--- a/draft-scenarios/metadata.tex
+++ b/draft-scenarios/metadata.tex
@@ -96,7 +96,7 @@
 \newtoggle{githubbuild}
 
 % Variables
-\def\_assets{../assets}
+\def\_assets{assets}
 
 \def\art{\_assets/art}
 \def\cards{\_assets/cards}
