remove extra text to fix spacing

--- a/draft-scenarios/campaigns/castle_sicilian_dragon.tex
+++ b/draft-scenarios/campaigns/castle_sicilian_dragon.tex
@@ -74,7 +74,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 
 \subsection*{\MakeUppercase{Heroes placement}}
 
-Place your Castle Hero on the empty Field of the rightmost Far Tile. Rotate the Tile as desired.
+Place your Castle Hero on the empty Field of the rightmost Far Tile.
 
 Place a Necropolis Hero on the center Field of the S1 Necropolis Tile.
 
