updates per code review, new catherine pic

--- a/draft-scenarios/campaigns/castle_greek_gift.tex
+++ b/draft-scenarios/campaigns/castle_greek_gift.tex
@@ -87,22 +87,22 @@ Defeat the enemy army.
 
 \textbf{\nth{1} Round:}
 \begin{itemize}
-  \item Read "Distant Threat" section
+  \item Read ``Distant Threat'' section
 \end{itemize}
 
 \textbf{If entering the settlement on F3:}
 \begin{itemize}
-  \item Read "Reverent Allies" section
+  \item Read ``Reverent Allies'' section
 \end{itemize}
 
 \textbf{Before combat with the enemy Hero:}
 \begin{itemize}
-  \item Read "Bait and Switch" section
+  \item Read ``Bait and Switch'' section
 \end{itemize}
 
 \textbf{When you complete the Scenario:}
 \begin{itemize}
-  \item Read "The Chase Begins" section
+  \item Read ``The Chase Begins'' section
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional rules}}
@@ -122,11 +122,6 @@ During this Castle campaign Scenario, the following rules apply:
 
 \end{multicols}
 
-% \vspace{3em}
-% \begin{center}
-%   \includegraphics[width=0.6\paperwidth]{\_assets/maps/sentinels.png}
-% \end{center}
-
 \begin{tikzpicture}[overlay]
   \node at (8.6, -5.3) {
     \includegraphics[width=\textwidth]{\_assets/maps/castle_greek_gift.png}
@@ -135,7 +130,6 @@ During this Castle campaign Scenario, the following rules apply:
 \end{tikzpicture}
 
 \newpage
-
 
 \begin{multicols*}{2}
 
@@ -166,13 +160,13 @@ The early morning sun was bright, and the figure that swooped low was in front o
 
 With lightning speed, the figure landed mere feet from them to reveal the stubbled, handsome face of a young man with golden, curled locs and impressively robust bronze armor sculpted to his muscular form. He was one of the famed Archangels to have stayed near Steadwick after Catherine's victory. While the forces behind her fell to their knees in reverence, she only nodded with stern resolve.
 
-With a deeper, and more reverberating voice than any man, the angel was first to speak. "Queen Catherine. I expected you might come when I spied the rot taking form in the hills."
+With a deeper, and more reverberating voice than any man, the angel was first to speak. ``Queen Catherine. I expected you might come when I spied the rot taking form in the hills.''
 
-Catherine responded with a smile. It was good to see she still had allies; her forces would need bolstering to take on the undead. "It's good to see you, my friend," she said. "It seems Steadwick is threatened again, and I ride to root out the evil before it can seed. Would you join me at my side?"
+Catherine responded with a smile. It was good to see she still had allies; her forces would need bolstering to take on the undead. ``It's good to see you, my friend,'' she said. ``It seems Steadwick is threatened again, and I ride to root out the evil before it can seed. Would you join me at my side?''
 
-"Of course, my queen!" the angel barked. "Combined, no evil can thwart our advance!" As the final words left his lips and began to echo, he drew his weapon. The longsword ignited as it left its sheath, and its blazing glory had most of those kneeling averting their eyes. Immediately after, he took to the air and began circling the area again. Catherine smiled wide as she watched more angels appear, then looked back to her forces and extended an open palmed arm forward in a command to march.
+``Of course, my queen!'' the angel barked. ``Combined, no evil can thwart our advance!'' As the final words left his lips and began to echo, he drew his weapon. The longsword ignited as it left its sheath, and its blazing glory had most of those kneeling averting their eyes. Immediately after, he took to the air and began circling the area again. Catherine smiled wide as she watched more angels appear, then looked back to her forces and extended an open palmed arm forward in a command to march.
 
-\textcolor{darkcandyapplered}{Add "A Few" Archangels to your army.}
+\textcolor{darkcandyapplered}{Add ``A Few'' Archangels to your army.}
 
 \textbf{Bait And Switch}
 
@@ -188,7 +182,7 @@ It was a trap. The necromancer and his strongest forces were not there, and Cath
 
 \begin{itemize}
   \item \textcolor{darkcandyapplered}{Replace the Ghost Dragons and Dread Knights with \svgunit{bronze} neutral Zombies and Skeletons.}
-  \item \textcolor{darkcandyapplered}{Play "Cloak of the Undead King IV" and "Cloak of the Undead King VI" onto the packs of Zombies and Skeletons, respectively.}
+  \item \textcolor{darkcandyapplered}{Play ``Cloak of the Undead King IV'' and ``Cloak of the Undead King VI'' onto the packs of Zombies and Skeletons, respectively.}
   \item \textcolor{darkcandyapplered}{Remove the AI Might and Magic Deck from the game, the undead fight on their own.}
 \end{itemize}
 
@@ -205,11 +199,11 @@ The necromancer had played his opening move, and won.
 
 Just before Catherine turned to her regrouping forces, she spotted the spectral blue of the real Ghost Dragon in the distance. Its work destroying Steadwick's defense had been finished.
 
-Archangels circled overhead, and Catherine threw her head to the sky, tears welling at the thought of losing what she had worked so hard to build. "Find him!" she roared, addressing whatever gods were listening as well as the angels above.
+Archangels circled overhead, and Catherine threw her head to the sky, tears welling at the thought of losing what she had worked so hard to build. ``Find him!'' she roared, addressing whatever gods were listening as well as the angels above.
 
-"Is that… wise?" Rion asked softly.
+``Is that… wise?'' Rion asked softly.
 
-Catherine responded with fire in her eyes. "What good is rebuilding a ruin when the fiend will just continue to play his tricks?" she said. "No. If we want to save Steadwick, we have to end him before he can further strengthen himself."
+Catherine responded with fire in her eyes. ``What good is rebuilding a ruin when the fiend will just continue to play his tricks?'' she said. ``No. If we want to save Steadwick, we have to end him before he can further strengthen himself.''
 
 \begin{itemize}
   \item \textcolor{darkcandyapplered}{Remove Archangels from your army.}
@@ -224,9 +218,3 @@ Catherine responded with fire in her eyes. "What good is rebuilding a ruin when 
 \end{center}
 
 \end{multicols*}
-
-
-
-
-
-
