--- a/draft-scenarios/campaigns/castle_two_knights_defense.tex
+++ b/draft-scenarios/campaigns/castle_two_knights_defense.tex
@@ -95,12 +95,12 @@ Place a Necropolis Hero on the bottom left Field of the leftmost Far Tile. Revea
 
 \textbf{\nth{1} Round:}
 \begin{itemize}
-  \item Read "The Race" section
+  \item Read ``The Race'' section
 \end{itemize}
 
 \textbf{When you complete the Scenario:}
 \begin{itemize}
-  \item Read "Checkmate" section
+  \item Read ``Checkmate'' section
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional rules}}
@@ -112,11 +112,8 @@ During this Castle campaign Scenario, the following rules apply:
   \item Each time you visit a trading post, draw the top cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy Decks. You may recruit any, or all of them by paying their cost. Shuffle any un-hired ones back into their Decks
   \item After defeating the neutral army at the Dragon Utopia, add a random dragon from the \svgunit{azure} Azure neutral Deck to your army
   \item The enemy army follows the normal AI movement rules, stopping to capture settlements and mines, with its ultimate goal to reach the Dragon Utopia
-  \item If the enemy army reaches the Dragon Utopia before you do, flip the "Pack" side of Dread Knights to "Few" and add "A Pack" of Ghost Dragons
+  \item If the enemy army reaches the Dragon Utopia before you do, flip the ``Pack'' side of Dread Knights to ``Few'' and add ``A Pack'' of Ghost Dragons
 \end{itemize}
-
-
-% \includegraphics[width=\linewidth, keepaspectratio]{\art/griffin.png}
 
 \begin{tikzpicture}[overlay]
     \node at (-1.0, -9.0) {
@@ -141,11 +138,11 @@ Then it dawned on her. Old tales told of an ancient Dragon Utopia in the badland
 
 To her surprise, the necropolis' courtyard was a buzz of energy. She placed her hands on the overlook's railing and peered over the edge to spy a host of knights in the color and flair of various baronies. 
 
-Rion came rushing up to her a moment later, intent on delivering news of their new guests. "Queen Catherine!" he said excitedly. "Lordships around Steadwick heard of the tragedy and have sent their champions to aid us. The knights spent days tracking and catching up to us, and they mean to join us and see the campaign through."
+Rion came rushing up to her a moment later, intent on delivering news of their new guests. ``Queen Catherine!'' he said excitedly. ``Lordships around Steadwick heard of the tragedy and have sent their champions to aid us. The knights spent days tracking and catching up to us, and they mean to join us and see the campaign through.''
 
-Catherine smiled wide. "Then tell them to get ready; the race is on."
+Catherine smiled wide. ``Then tell them to get ready; the race is on.''
 
-\textcolor{darkcandyapplered}{Add "A Few" Champions to your army.}
+\textcolor{darkcandyapplered}{Add ``A Few'' Champions to your army.}
 
 \textbf{Checkmate}
 
@@ -158,9 +155,9 @@ Rion approached, and Catherine turned before embracing him in a rare moment of e
 Her duty fulfilled and her seat secure, Catherine would see Steadwick rebuilt with Erathia just a little safer… for now.
 
 \begin{itemize}
-    \item \textcolor{darkcandyapplered}{If you have not been to the Dragon Utopia, read "A Queen's Right"}
-    \item \textcolor{darkcandyapplered}{If the enemy army reached the Dragon Utopia before being defeated, read "A Queen's Lament"}
-    \item \textcolor{darkcandyapplered}{If you reached the Dragon Utopia first, defeating the dragons within, read "A Queen's Fury"}
+    \item \textcolor{darkcandyapplered}{If you have not been to the Dragon Utopia, read ``A Queen's Right''}
+    \item \textcolor{darkcandyapplered}{If the enemy army reached the Dragon Utopia before being defeated, read ``A Queen's Lament''}
+    \item \textcolor{darkcandyapplered}{If you reached the Dragon Utopia first, defeating the dragons within, read ``A Queen's Fury''}
 \end{itemize}
 
 \textbf{A Queen's Fury}
@@ -177,9 +174,9 @@ A strange, deep calling swelled within Catherine. She turned her focus to the ma
 
 Catherine approached slowly, with the remains of her battered forces following cautiously. Reaching the foot of the fortress, it was only a moment before the majestic snout of an azure dragon crawled into view from the large, curved, open entry to the stony fortress. The rest of the creature soon followed, and with a stretch of wings, it stared down at the human queen. While many fell to their knees, Catherine looked up to meet the dragon's gaze, and the two shared a moment of understanding between royalty. It appeared the dragon knew what fate it had been spared from, and in thanks, it bowed to the human. After a reflective moment, Catherine nodded, then turned, satisfied with the interaction.
 
-His steed at a trot, Rion quickly approached. "Well? Are we going inside?" he asked curiously.
+His steed at a trot, Rion quickly approached. ``Well? Are we going inside?'' he asked curiously.
 
-"There's no need," Catherine replied. "I saw it in her eyes; the dragon knows what we did today. We have their thanks and perhaps a favor to call on in the future. Gods know we need it…"
+``There's no need,'' Catherine replied. ``I saw it in her eyes; the dragon knows what we did today. We have their thanks and perhaps a favor to call on in the future. Gods know we need it…''
 
 Catherine drew her sword and reared her own steed high, presenting herself before her remaining forces with the dragon silhouetted behind her. After a rousing speech that stirred the hearts of man and beast alike, she galloped to the rear lines to turn the formation toward home.
 
@@ -191,10 +188,4 @@ Catherine regretted she couldn't save the dragons from their fate. If things had
 
 Home felt distant in the haze of fury that Catherine had been prisoner to. As she trot past the remains of those that had fought for her, her heart swelled with emotion. It was war, and loss was inevitable. She turned to the remaining few and threw a weak hand forward out of the badlands. It was time to pick up the pieces.
 
-
 \end{multicols*}
-
-
-
-
-
