--- a/draft-scenarios/campaigns/castle_sicilian_dragon.tex
+++ b/draft-scenarios/campaigns/castle_sicilian_dragon.tex
@@ -135,10 +135,13 @@ During this Castle campaign Scenario, the following rules apply:
 \columnbreak
 
 \begin{itemize}
-\item All neutral enemies fight using the Neutral Enemy Deck.
-\item Each time you visit a trading post, draw the top cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy Decks. You may recruit any, or all of them by paying their cost. Shuffle any un-hired ones back into their Decks
+\item All neutral enemies fight using the Neutral Enemy Deck
+\item Each time you visit a trading post, draw the top cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy Decks. 
+You may recruit any, or all of them by paying their cost.
+Shuffle any un-hired ones back into their Decks
 \item If the relic is captured, it may be traded in at a trading post for 30 \svgunit{gold}, or \textbf{Search (3)} the relic Deck, twice.
-\item When fighting the enemy at thier town, they have a citadel. Don't forget to add the walls and arrow tower to make the battle a siege.
+\item When fighting the enemy at thier town, they have a citadel
+Don't forget to add the walls and arrow tower to make the battle a siege
 \end{itemize}
 
 \end{multicols}
@@ -157,69 +160,108 @@ During this Castle campaign Scenario, the following rules apply:
 
 \textbf{Into the Badlands}
 
-Catherine crossed arms and leaned on her saddle horn as she peered out over the wasteland they'd been led to. The Archangels had gone ahead of the small force she'd scraped together, and she wondered if it had been a mistake to let them go. With the enemy stronghold still nowhere in sight, locating it would take time, and the inhospitable landscape would not be kind.
+Catherine crossed arms and leaned on her saddle horn as she peered out over the wasteland they'd been led to.
+The Archangels had gone ahead of the small force she'd scraped together, and she wondered if it had been a mistake to let them go.
+With the enemy stronghold still nowhere in sight, locating it would take time, and the inhospitable landscape would not be kind.
 
-Rion pulled next to her as he finished gulping the last contents of a water pouch. He wiped the dribble and sweat from his face before saying anything. ``Not the best place to do any fighting. Besides the poor conditions, I've heard the locals are known for a particular… ferocity.''
+Rion pulled next to her as he finished gulping the last contents of a water pouch.
+He wiped the dribble and sweat from his face before saying anything.
+``Not the best place to do any fighting.
+Besides the poor conditions, I've heard the locals are known for a particular… ferocity.''
 
-``Well then, we'll just have to bring them to heel,'' Catherine replied coldly. The truth was she was more worried about that possibility than she let on, but she had to maintain her composure to protect the image of her strength.
+``Well then, we'll just have to bring them to heel,'' Catherine replied coldly.
+The truth was she was more worried about that possibility than she let on, but she had to maintain her composure to protect the image of her strength.
 
 ``You think they'll fight for us?'' Rion asked with a raised eyebrow.
 
-Catherine tightly gripped a heavy sack of coin by her side and heaved it into her lap so the contents jingled like tiny bells to emphasize her point. ``I think generous arrangements can be made. For the rest, the sword will do.''
-
-
+Catherine tightly gripped a heavy sack of coin by her side and heaved it into her lap so the contents jingled like tiny bells to emphasize her point.
+``I think generous arrangements can be made.
+For the rest, the sword will do.''
 
 \textbf{The First Relic}
 
-Ahead, a clearing of dry, cracked ground gave way to a large Obelisk protruding from the ground like a massive marker. Catherine had seen enough magical artifacts in her time that she could tell the structure was a place of power. Throwing an arm forward, she signaled Rion to proceed with an inspection.
+Ahead, a clearing of dry, cracked ground gave way to a large Obelisk protruding from the ground like a massive marker.
+Catherine had seen enough magical artifacts in her time that she could tell the structure was a place of power.
+Throwing an arm forward, she signaled Rion to proceed with an inspection.
 
-The mage approached slowly, removing a glove to touch the cold stone of the smoothly cut sides with his skin. Intricate runes were carved in it, detailing all manner of scripture in long-lost tongues. As awe-inspiring as it was, equally apparent was the time-worn damage.
+The mage approached slowly, removing a glove to touch the cold stone of the smoothly cut sides with his skin.
+Intricate runes were carved in it, detailing all manner of scripture in long-lost tongues.
+As awe-inspiring as it was, equally apparent was the time-worn damage.
 
-After a moment, he turned to Catherine. ``It's a transport beacon,'' he said. ``Like a monolith, but with a shorter range. At least… it was. It's damaged, and where the magic in the runes should be strong, even glowing, they're dark, and any power is long decayed.''
+After a moment, he turned to Catherine.
+``It's a transport beacon,'' he said.
+``Like a monolith, but with a shorter range.
+At least… it was.
+It's damaged, and where the magic in the runes should be strong, even glowing, they're dark, and any power is long decayed.''
 
-Catherine dismounted and slowly inspected the area before saying anything. ``Some of the damage is recent. I can still feel residual heat; the Archangels were here.''
+Catherine dismounted and slowly inspected the area before saying anything.
+``Some of the damage is recent
+I can still feel residual heat; the Archangels were here.''
 
 ``How can you be sure? Surely, some would have found us by now and notified us of their progress.''
 
-``They've never let me down,'' Catherine grunted. ``Come, let's see if other such beacons exist.''
+``They've never let me down,'' Catherine grunted.
+``Come, let's see if other such beacons exist.''
 
 \textbf{Showdown}
 
 Sounds of battle perked the ears of Catherine's forces, and she urged her steed forward to catch sight of the combatants.
 
-Rounding crags and jagged rocks jutting at all angles, another Obelisk revealed itself with the final moments of a battle taking place around it. Several Archangels were on the ground, locked in combat with the remains of a larger undead force.
+Rounding crags and jagged rocks jutting at all angles, another Obelisk revealed itself with the final moments of a battle taking place around it.
+Several Archangels were on the ground, locked in combat with the remains of a larger undead force.
 
 Approaching at speed, Catherine raised a fist in the air to salute the holy warriors, and several rasped their bronze chestplaces in return.
 
-``Queen Catherine, you've saved us the trouble of finding you,'' the lead angel said in his deep voice. He gestured to the Obelisk with an open palm as the sounds of battle finally died. ``The foes meant to keep us from these structures by destroying them. We barely managed to intercept them in time to preserve this one.''
+``Queen Catherine, you've saved us the trouble of finding you,'' the lead angel said in his deep voice.
+He gestured to the Obelisk with an open palm as the sounds of battle finally died.
+``The foes meant to keep us from these structures by destroying them.
+We barely managed to intercept them in time to preserve this one.''
 
-Rion trotted past them as they spoke, intent on inspecting the intact Obelisk. As before, he began to place his hand on the cold stone, but recoiled before making contact. ``It's active!'' he said excitedly. ``This may be the break we need. With luck, this will take us directly to the enemy stronghold.''
+Rion trotted past them as they spoke, intent on inspecting the intact Obelisk.
+As before, he began to place his hand on the cold stone, but recoiled before making contact.
+``It's active!'' he said excitedly.
+``This may be the break we need.
+With luck, this will take us directly to the enemy stronghold.''
 
-Catherine smiled, reaching to clasp the arm of the angel in thanks for his work. She looked back at the ragtag group of forces she'd gathered and hoped it would be enough for a siege.
+Catherine smiled, reaching to clasp the arm of the angel in thanks for his work.
+She looked back at the ragtag group of forces she'd gathered and hoped it would be enough for a siege.
 
 \begin{itemize}
   \item \textcolor{darkcandyapplered}{Add ``A Few'' Archangels to your army.}
-  \item \textcolor{darkcandyapplered}{You may now teleport to the enemy town on Tile S1. If you choose not to, you may in the future by spending one movement at this Obelisk.}
+  \item \textcolor{darkcandyapplered}{You may now teleport to the enemy town on Tile S1.
+  If you choose not to, you may in the future by spending one movement at this Obelisk.}
 \end{itemize}
 
 
 \textbf{The Escape}
 
-With the thick, macabre, almost demonic-looking walls breached and the bulk of the necromancer's forces slain, the castle belonged to Catherine. It was an eye for an eye, and she relished driving the final blow into the last enemy ranks still in the courtyard herself. 
+With the thick, macabre, almost demonic-looking walls breached and the bulk of the necromancer's forces slain, the castle belonged to Catherine.
+It was an eye for an eye, and she relished driving the final blow into the last enemy ranks still in the courtyard herself. 
 
-Unfortunately, after a frantic search of the grounds, Vhidhax himself was nowhere in sight. Catherine raced up the walls just in time to peer over the side and catch sight of the necromancer fleeing with a sizable retinue that had quietly slipped away during the battle. He was traveling north, further into the badlands and away from her home. The campaign wasn't finished yet.
+Unfortunately, after a frantic search of the grounds, Vhidhax himself was nowhere in sight.
+Catherine raced up the walls just in time to peer over the side and catch sight of the necromancer fleeing with a sizable retinue that had quietly slipped away during the battle.
+He was traveling north, further into the badlands and away from her home.
+Catherine's campaign wasn't finished yet.
 
-Catherine turned to observe the battlefield from above. The butcher's bill had been large. Both fresh and long decaying bodies lay strewn about, several Archangels among them. Rion caught up with her a minute later, and the two exchanged looks of exhaustion.
+Catherine turned to observe the battlefield from above.
+The butcher's bill had been large.
+Both fresh and long decaying bodies lay strewn about, several Archangels among them.
+Rion caught up with her a minute later, and the two exchanged looks of exhaustion.
 
 ``It's done,'' Rion said through panting breaths.
 
-``No. The necromancer lives, and he flees north.''
+``No.
+The necromancer lives, and he flees north.''
 
-``But… our forces. The Archangels are too few to continue; what hope do we have?''
+``But… our forces.
+The Archangels are too few to continue; what hope do we have?''
 
-``There is always hope, my friend. We'll use this castle as a base to resupply, and then we need to give chase before the fiend regains his strength. Steadwick will never be safe otherwise!''
+``There is always hope, my friend.
+We'll use this castle as a base to resupply, and then we need to give chase before the fiend regains his strength.
+Steadwick will never be safe otherwise!''
 
-``This is foolish,'' Rion sighed. ``We don't need to fight this hard; Vhidhax is not your father, Catherine…''
+``This is foolish,'' Rion sighed.
+``We don't need to fight this hard; Vhidhax is not your father, Catherine…''
 
 \begin{itemize}
   \item \textcolor{darkcandyapplered}{Remove Archangels from your army, if possible.}
